@@ -290,6 +290,9 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Orator Kloe 1"]															= "I will find the missing Vulpin."
 	L["Gubbins 1"]																= "I will take a parasol."
 	L["Xandria 1"]																= "Let's fly, Xandria."
+	L["Prince Renathal 1"]														= "How can I help the assault, Prince Renathal?"
+	L["Indri the Treesinger 1"]													= "Yes, I will help."
+	L["Chalkyth 1"]																= "Yes, I will help."
 	L["Renavyth 1"]																= "I will assist you."
 	L["Aspirant Thetes 1"]														= "I will accompany you."
 	L["Archivist Roh-Suir 1"]													= "I found more relics we can use for our cataloged research."
