@@ -23,6 +23,7 @@ HelpMePlay | 1.0.5
 		Added multiple dialogs for Shandris Feathermoon.
 		Added dialogs for multiple NPCs in Torghast.
 		Added dialogs for multiple NPCs in the Maw for the Night Fae assault.
+		Added dialogs for multiple NPCs in the Maw for the Venthyr assault.
 		Added dialogs for multiple NPCs in the Maw for the Kyrian assault.
 		Added dialogs for NPCs in Argus zones.
 		Added support for more Stable Masters (and healing battle pets.)
